ensure text remains readable in table by allowing the cell to grow.

--- a/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/components/organisms/table/TableBody.module.css
+++ b/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/components/organisms/table/TableBody.module.css
@@ -16,7 +16,6 @@
 .row {
   display: flex;
   align-items: stretch;
-  min-height: 48px;
 }
 
 .tableBody>.row:nth-child(odd) {
