--- a/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/components/organisms/table/cells/Cell.module.css
+++ b/src/Rebelit.OT.Discover.EdgeApp.WebApp/src/components/organisms/table/cells/Cell.module.css
@@ -4,6 +4,7 @@
   padding: 12px 16px;
   flex: 1;
   min-width: 0;
+  min-height: 48px;
   border-left: 1px solid var(--purple-200);
 
   p {
@@ -11,6 +12,7 @@
     font-weight: 400;
     font-size: 1.8rem;
     color: var(--black);
+    word-break: break-word;
   }
 
   &.selected {
